--- a/scss/common.scss
+++ b/scss/common.scss
@@ -22,8 +22,8 @@ reproduced or used in any manner whatsoever.
 #resources,
 #profile,
 #contact {
-  padding-top: 55px;
-  padding-bottom: 55px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   @include max-screen($breakpMobileLand-max) {
     padding-top: 40px;
     padding-bottom: 40px;
